--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,7 @@ jobs:
           keys: [frontend-build]
       - run:
           name: Build front-end
-          command: |
-            # Your code here
-            exit 1
+          command: npm frontend && npm install && npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
