--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           keys: [frontend-build]
       - run:
           name: Build front-end
-          command: npm frontend && npm install && npm run build
+          command: cd frontend && npm install && npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
