--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,10 @@ jobs:
           keys: [frontend-build]
       - run:
           name: Build front-end
-          command: cd frontend && npm install && npm run build
+          command: |
+            cd frontend
+            npm install
+            npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -57,8 +60,9 @@ jobs:
       - run:
           name: Back-end build
           command: |
-             # Your code here
-             exit 1
+             cd backend
+             npm install
+             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
