--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -269,7 +269,9 @@ workflows:
   default:
     jobs:
       - build-frontend
-      #- build-backend
+      - build-backend:
+          requires:
+            - brild-frontend
       #- test-frontend:
       #    requires: [build-frontend]
       #- test-backend:
