--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,7 +271,7 @@ workflows:
       - build-frontend
       - build-backend:
           requires:
-            - brild-frontend
+            - build-frontend
       #- test-frontend:
       #    requires: [build-frontend]
       #- test-backend:
