--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,14 +271,13 @@ workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend:
-          requires:
-            - build-frontend
+      - build-backend
       - test-frontend:
           requires:
             - build-frontend
-      #- test-backend:
-      #    requires: [build-backend]
+      - test-backend:
+          requires:
+            - build-backend
       #- scan-backend:
       #    requires: [build-backend]
       #- scan-frontend:
