--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,9 @@ jobs:
       - checkout
       - restore_cache:
           keys: [frontend-build]
-      - run: cd frontend && npm test
+      - run: |
+          cd frontend
+          npm test
 
   test-backend:
     docker:
@@ -83,7 +85,9 @@ jobs:
       - checkout
       - restore_cache:
           keys: [backend-build]
-      - run: cd backend && npm test
+      - run: |
+          cd backend
+          npm test
 
   #scan-frontend:
   #  docker:
