--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,21 +89,25 @@ jobs:
           cd backend
           npm test
 
-  #scan-frontend:
-  #  docker:
-  #    # Docker image here
-  #  steps:
-  #    # Checkout code from git
-  #    # Restore from cache
-  #    # Your job code here
-  #
-  #scan-backend:
-  #  docker:
-  #    # Docker image here
-  #  steps:
-  #    # Checkout code from git
-  #    # Restore from cache
-  #    # Your job code here
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      # Restore from cache
+      - run: |
+          cd frontend
+          npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      # Restore from cache
+      - run: |
+          cd backend
+          npm audit --audit-level=critical
 
   #deploy-infrastructure:
   #  docker:
@@ -282,10 +286,12 @@ workflows:
       - test-backend:
           requires:
             - build-backend
-      #- scan-backend:
-      #    requires: [build-backend]
-      #- scan-frontend:
-      #    requires: [build-frontend]
+      - scan-frontend:
+          requires:
+            - test-frontend
+      - scan-backend:
+          requires:
+            - test-backend
       #- deploy-infrastructure:
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #    filters:
