--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      # Restore from cache
+      - restore_cache:
+          keys: [frontend-build]
       - run: |
           cd frontend
           npm audit --audit-level=critical
@@ -104,7 +105,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      # Restore from cache
+      - restore_cache:
+          keys: [backend-build]
       - run: |
           cd backend
           npm audit --audit-level=critical
