--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,9 +300,9 @@ workflows:
             - test-backend
             - scan-frontend
             - scan-backend
-          filters:
-            branches:
-              only: [test-feature-branch]
+          # filters:
+          #   branches:
+          #     only: [test-feature-branch]
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
       #- run-migrations:
