--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,8 +141,7 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             BACKEND_URL=$(aws ec2 describe-instances --region ${AWS_DEFAULT_REGION} --filters 'Name=tag:Code,Values="Stack-Backend-${CIRCLE_WORKFLOW_ID}"' --query "Reservations[*].Instances[0].PublicDnsName" --output text)
-            echo $BACKEND_URL > .circleci/ansible/inventiry.txt
-            cat .circleci/ansibl/inventiry.txt
+            echo $BACKEND_URL >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
