--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,12 +146,12 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - run:
-          name: Rollback
-          command: |
-            aws cloudformation delete-stack  --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}"
-            aws cloudformation delete-stack  --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}"
-          when: on_fail
+      # - run:
+      #     name: Rollback
+      #     command: |
+      #       aws cloudformation delete-stack  --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}"
+      #       aws cloudformation delete-stack  --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}"
+      #     when: on_fail
 
   configure-infrastructure:
     docker:
