--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,18 +154,17 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: ansible/ansible:default
+      - image: python
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: [ce:e6:6c:4a:2a:4b:10:07:17:15:15:4d:21:5d:6d:e5]
       - attach_workspace:
           at: ./
-      # - run:
-      #     name: Install dependencies
-      #     command: |
-      #       # Your code here
-      #       exit 1
+      - run:
+          name: Install dependencies
+          command: |
+            pip install ansible
       - run:
           name: Configure server
           command: |
