--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,24 +12,20 @@ commands:
           command: |
             # Your code here
             exit 1
-
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
-    # parameters:
-      # Add parameter here     
     steps:
       - run:
           name: Revert migrations
-          # Add when this will run
+          when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS = 1
             if(( $SUCCESS==1 )); 
             then
-            #  cd ~/project/backend
-            #  npm install
-            #  Add revert code here. You can find this in the Getting Started section.
-              exit 1
+              cd ~/project/backend
+              npm install
+              npm run migrations:revert
             fi
             
 jobs:
@@ -196,31 +192,36 @@ jobs:
           name: Send migration results to memstash
           command: |
             cd backend/
-            cat result.txt
-            RESULT=$(grep -Fc "has been executed successfully" result.txt)
+            RESULT=$(cat result.txt | { grep -Fc "has been executed successfully" || :; })
             curl -H "Content-Type: text/plain" -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request PUT --data ${RESULT} https://api.memstash.io/values/migration_result
       # Here's where you will add some code to rollback on failure      
 
-  #deploy-frontend:
-  #  docker:
-  #    # Docker image here that supports AWS CLI
-  #  steps:
-  #    # Checkout code from git
-  #    - run:
-  #        name: Install dependencies
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Get backend url
-  #        command: |
-  #          # your code here
-  #          export API_URL="http://${BACKEND_IP}:3030"
-  #          echo "${API_URL}"
-  #    - run:
-  #        name: Deploy frontend objects
-  #        command: |
-  #          # your code here
-  #    # Here's where you will add some code to rollback on failure      
+  deploy-frontend:
+    docker:
+      image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y gcc-c++ make 
+            curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
+            yum install -y nodejs
+      - run:
+          name: Get backend url
+          command: |
+            cd frontend
+            BACKEND_IP=$(curl -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request GET https://api.memstash.io/values/backend_url)
+            API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}" > ".env"
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            aws s3 sync ./dist s3://"udapeople-${CIRCLE_WORKFLOW_ID}"
+      # Here's where you will add some code to rollback on failure      
                     
   #deploy-backend:
   #  docker:
