--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,36 +242,35 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            cd backend
-            npm install
-            npm run build
-            cd ..
             tar -cf backend.tar ./backend
             ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
 
-  #smoke-test:
-  #  docker:
-  #    # Lightweight Docker image 
-  #  steps:
-  #    # Checkout code from git
-  #    - run:
-  #        name: Install dependencies
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Get backend url
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Backend smoke test.
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Frontend smoke test.
-  #        command: |
-  #          # your code here
-  #    # Here's where you will add some code to rollback on failure  
+  smoke-test:
+    docker:
+      - image: alpine:3.14.2
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add curl
+      - run:
+          name: Backend smoke test.
+          command: |
+            BACKEND_URL=$(curl -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request GET https://api.memstash.io/values/backend_url)
+            curl "https://${BACKEND_URL}/api/status"
+      - run:
+          name: Frontend smoke test.
+          command: |
+            FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-east-1.amazonaws.com"
+            if curl -s ${FRONTEND_URL} | grep "Welcome"
+              then
+                return 1
+              else
+                return 0
+            fi
+      # Here's where you will add some code to rollback on failure  
 
   #cloudfront-update:
   #  docker:
@@ -335,15 +334,21 @@ workflows:
           #   branches:
           #     only: [test-feature-branch]
       - configure-infrastructure:
-          requires: [deploy-infrastructure]
+          requires:
+            - deploy-infrastructure
       - run-migrations:
-          requires: [configure-infrastructure]
+          requires:
+            - configure-infrastructure
       - deploy-frontend:
-          requires: [run-migrations]
+          requires:
+            - run-migrations
       - deploy-backend:
-          requires: [run-migrations]
-      #- smoke-test:
-      #    requires: [deploy-backend, deploy-frontend]
+          requires:
+            - run-migrations
+      - smoke-test:
+          requires:
+            - deploy-backend
+            - deploy-frontend
       #- cloudfront-update:
       #    requires: [smoke-test]
       #- cleanup:
