--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,14 @@ version: 2.1
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-    parameters:
-      # Add parameter here   
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID}/" --recursive
+            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID}
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID}
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     steps:
@@ -20,10 +19,10 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
+            SUCCESS=$(curl -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request GET https://api.memstash.io/values/migration_result)
             if(( $SUCCESS==1 )); 
             then
-              cd ~/project/backend
+              cd backend
               npm install
               npm run migrations:revert
             fi
@@ -147,6 +146,7 @@ jobs:
             aws cloudformation delete-stack  --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}"
             aws cloudformation delete-stack  --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}"
           when: on_fail
+      - destroy-environment
 
   configure-infrastructure:
     docker:
@@ -165,7 +165,7 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
-      # Here's where you will add some code to rollback on failure      
+      - destroy-environment     
 
   run-migrations:
     docker:
@@ -193,8 +193,9 @@ jobs:
           command: |
             cd backend/
             RESULT=$(cat result.txt | { grep -Fc "has been executed successfully" || :; })
-            curl -H "Content-Type: text/plain" -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request PUT --data ${RESULT} https://api.memstash.io/values/migration_result
-      # Here's where you will add some code to rollback on failure      
+            curl -H "Content-Type: text/plain" -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request PUT --data "${RESULT}" https://api.memstash.io/values/migration_result
+      - revert-migrations
+      - destroy-environment
 
   deploy-frontend:
     docker:
@@ -221,7 +222,8 @@ jobs:
             npm install
             npm run build
             aws s3 sync ./dist s3://"udapeople-${CIRCLE_WORKFLOW_ID}"
-      # Here's where you will add some code to rollback on failure      
+      - revert-migrations
+      - destroy-environment   
                     
   deploy-backend:
     docker:
@@ -244,8 +246,8 @@ jobs:
           command: |
             tar -cf backend.tar ./backend
             ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
-      # Here's where you will add some code to rollback on failure  
-
+      - revert-migrations
+      - destroy-environment
   smoke-test:
     docker:
       - image: alpine:3.14.2
@@ -270,7 +272,8 @@ jobs:
               else
                 return 0
             fi
-      # Here's where you will add some code to rollback on failure  
+      - revert-migrations
+      - destroy-environment
 
   #cloudfront-update:
   #  docker:
