--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,6 +161,7 @@ jobs:
           name: Install dependencies
           command: |
             pip install ansible
+            pip install awscli
       - run:
           name: Configure server
           command: |
@@ -172,6 +173,11 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - run:
+          name: install awscli
+          command: |
+            sudo apt-get update
+            sudo apt-get -y install awscli
       - run:
           name: Run migrations
           command: |
@@ -257,11 +263,12 @@ jobs:
           name: Install dependencies
           command: |
             apk add curl
+            pip3 --no-cache-dir install awscli
       - run:
           name: Backend smoke test.
           command: |
             BACKEND_URL=$(curl -H "token: 7fa6d083-1eb9-49f2-838f-ff3145ce3075" --request GET https://api.memstash.io/values/backend_url)
-            curl "https://${BACKEND_URL}:3000/api/status"
+            curl "https://${BACKEND_URL}:3030/api/status"
       - run:
           name: Frontend smoke test.
           command: |
@@ -275,40 +282,50 @@ jobs:
       - revert-migrations
       - destroy-environment
 
-  #cloudfront-update:
-  #  docker:
-  #    # Docker image here that supports AWS CLI
-  #  steps:
-  #    # Checkout code from git
-  #    - run:
-  #        name: Install dependencies
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Update cloudfront distribution
-  #        command: |
-  #          # your code here
-  #    # Here's where you will add some code to rollback on failure  
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y gcc-c++ make
+            yum -y install tar gzip jq
+            curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
+            yum install -y nodejs
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template .circleci/files/cloudfront.yml \
+              --stack-name udapeople-cloudfront \
+              --parameters 
+      - destroy-environment
+      - revert-migrations
 
-#cleanup:
-#    docker:
-#      # Docker image here
-#    steps:
-#      # Checkout code from git
-#      - run:
-#          name: Get old stack workflow id
-#          command: |
-#            # your code here
-#            export OldWorkflowID="the id here"
-#            export STACKS=[] #put the list of stacks here
-#      - run:
-#          name: Remove old stacks and files
-#          command: |
-#            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#            then
-#              # your code here
-#            fi
-            
+  cleanup:
+    docker:
+      - image: amazon/awscli
+    steps:
+      - checkout
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+      - run:
+          name: Remove old stacks and files
+          command: |
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive)
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            fi
 
 workflows:
   default:
@@ -333,9 +350,6 @@ workflows:
             - test-backend
             - scan-frontend
             - scan-backend
-          # filters:
-          #   branches:
-          #     only: [test-feature-branch]
       - configure-infrastructure:
           requires:
             - deploy-infrastructure
@@ -352,7 +366,9 @@ workflows:
           requires:
             - deploy-backend
             - deploy-frontend
-      #- cloudfront-update:
-      #    requires: [smoke-test]
-      #- cleanup:
-      #    requires: [cloudfront-update]
+      - cloudfront-update:
+          requires:
+            - smoke-test
+      - cleanup:
+          requires:
+            - cloudfront-update
