--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ jobs:
                 return 0
             fi
       - revert-migrations
-      # - destroy-environment
+      - destroy-environment
 
   cloudfront-update:
     docker:
