--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,9 +274,7 @@ jobs:
             FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-east-1.amazonaws.com"
             if curl -s ${FRONTEND_URL} | grep "Welcome"
               then
-                return 1
-              else
-                return 0
+                exit 1
             fi
       - revert-migrations
       - destroy-environment
