--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,7 +299,7 @@ jobs:
             aws cloudformation deploy \
               --template .circleci/files/cloudfront.yml \
               --stack-name udapeople-cloudfront \
-              --parameters 
+              --parameters ParameterKey=WorkflowID,ParameterValue=${CIRCLE_WORKFLOW_ID},UsePreviousValue=false
       - destroy-environment
       - revert-migrations
 
