--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -319,14 +319,16 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            echo ${OldWorkflowID}
+            echo ${STACKS}
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             fi
-      # - destroy-environment
-      # - revert-migrations
+      - destroy-environment
+      - revert-migrations
 
 workflows:
   default:
