--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,7 +315,9 @@ jobs:
                 list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                 --no-paginate --output text)
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            echo ${OldWorkflowID}
+            echo ${STACKS}
       - run:
           name: Remove old stacks and files
           command: |
