--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,7 +298,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template .circleci/files/cloudfront.yml \
-              --stack-name udapeople-cloudfront \
+              --stack-name udapeople-cloud-front \
               --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID}
       - destroy-environment
       - revert-migrations
